--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <!--AJAX Moment JS -->>
+    <!--AJAX Moment JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <!-- Moment JS Link-->
     <link rel="Moment" href="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js">
@@ -87,7 +87,7 @@
     </main>
     <!--AXIOS JS Link-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0-0/axios.js"></script>
-    <!--Homework 6 script JS file-->
+    <!--Homework 6 script JS-->
     <script src="./script.js"></script>
 </body>
 </html>
