added asset folder and image and updated js and css links on html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--Google Fonts Link-->
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <!--Homework-6 CSS Link-->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     
     <title>Weather Dashboard</title>
 </head>
@@ -88,6 +88,6 @@
     <!--AXIOS JS Link-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0-0/axios.js"></script>
     <!--Homework 6 script JS-->
-    <script src="./script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
